syntax = "proto3";

package journey11.experiment.proto_kafka;

import "state.proto";
import "task.proto";

message Message1 {
    int64 field = 1;
    State state = 2;
    repeated Task tasks = 3;
}